Extra z-index for colorpicker as default one is overridden by ..dropdown-menu class. Fixes #679

--- a/Ip/Internal/Core/assets/admin/admin.tmp.css
+++ b/Ip/Internal/Core/assets/admin/admin.tmp.css
@@ -8581,6 +8581,7 @@ button.close {
 }
 .colorpicker {
   left: 0;
+  z-index: 1060;
   min-width: 130px;
   padding: 4px;
   margin-top: 1px;
